--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 
-
-
 <h1>
     This is the heart attack    
 </h1>
@@ -85,6 +83,8 @@
         <label for="thalanch">Maximum Heart rate:</label>
         <input id= 'thalanch' type="number" min='1' max='250' placeholder="Select">
         <br>
+        
+        <input type="submit" name='Submit' >
     </form>
-    <button>Submit</button>
+    
 </body>
