--- a/templates/home.html
+++ b/templates/home.html
@@ -1,90 +1,108 @@
 <!DOCTYPE html>
 
-<h1>
+<head>
+    <title>Heart Attack</title>
+    <link rel="stylesheet" href="{{ url_for('static',filename='styles/home.css') }}">   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
+</head>
+
+<h1 class="title">
     This is the heart attack    
 </h1>
 
 <body>
-    <h2>
-        Enter Your details 
-    </h2>
-
-    <form action ='heart' method="POST">
-        <label for="name">Enter your name:</label>        
-        <input id= 'name' type="text">
-        <br>
-
-        <label for="age">Enter your age:</label>
-        <input name="age" id= 'age' type="number" min='1' max='100'>
-        <br>
-
-        <label for="sex">Gender:</label>
-        <select name='sex' id='sex'>
-            <option value= -1>Please select your gender</option>
-            <option value=1>Male</option>
-            <option value=0>Female</option>
-        </select>
-        <br>
-
-        <label for="exang">Exercise Induced Angina:</label>
-        <select name='exang' id='exang'>
-            <option value=-1>Is it present?</option>
-            <option value=1>Yes</option>
-            <option value=0>No</option>
-        </select>
-        <br>
-
-        <label for="ca">Number of major vessels:</label>
-        <select name='ca' id='ca'>
-            <option value=-1>No of vesseles</option>
-            <option value=0>0</option>
-            <option value=1>1</option>
-            <option value=2>2</option>
-            <option value=3>3</option>
-        </select>
-        <br>
-        
-        <label for="cp">Chest pain:</label>
-        <select name='cp' id='cp'>
-            <option value=-1>Enter ches pain type</option>
-            <option value=1>typical angina</option>
-            <option value=2>atypical angina</option>
-            <option value=3>non-anginal pain</option>
-            <option value=4>asymptomatic</option>
-        </select>
-        <br>
-        
-        <label for="trtbs">Resting blood pressure(in mm Hg):</label>
-        <input name="trtbs" id= 'trtbs' type="number" min='80' max='180' placeholder="Select">
-        <br>
-
     
-        <label for="chol">Cholestral in mg/dl:</label>
-        <input name="chol" id= 'chol' type="number" min='0' max= '500' placeholder="Select">
-        <br>
+    <!-- <h2 >
+        Enter Your details 
+    </h2> -->
+    <div class="container pt-3" >
+        <form>
+            <div class="form-group row">
+                <label class="col col-form-label" for="name">Enter your name:</label>        
+                <input class="form-control col" id= 'name' type="text">
+                <br>
+            </div>
+            
+            <div class="form-group row">
+                <label class="col col-form-label" for="age">Enter your age:</label>
+                <input class="form-control col" id= 'age'  type="number" min='1' max='100'>
+                <br>
+            </div>
+            
+            <div class="form-group row">
+                <label class="col col-form-label" for="sex" >Gender:</label>
+                <select class="form-control col" name='sex'  style=" width: 420px;" id='sex'>
+                    <option  value="">Please select your gender</option>
+                    <option value="1">Male</option>
+                    <option value="0">Female</option>   
+                </select>
+                <br>
+            </div>
 
-        <label for="fbs">Fasting blood sugar (more than 120 mg/dl):</label>
-        <select name='fbs' id='fbs'>
-            <option value=-1>Select yes if its more than 120mg/dl</option>
-            <option value=1>Yes</option>
-            <option value=0>No</option>
-        </select>
-        <br>
-
-        <label for="rest_ecg">Rest ecg:</label>
-        <select name='rest_ecg' id='rest_ecg'>
-            <option value=-1>Select from following options</option>
-            <option value=0>Normal</option>
-            <option value=1>Having ST-T wave abnormality</option>
-            <option value=2>Showing probable or definite left ventricular hypertrophy by Estes' criteria</option>
-        </select>
-        <br>
-
-        <label for="thalanch">Maximum Heart rate:</label>
-        <input name="thalanch" id= 'thalanch' type="number" min='1' max='250' placeholder="Select">
-        <br>
+            <div class="form-group row">
+                <label class="col col-form-label" for="exang">Exercise Induced Angina:</label>
+                <select class="form-control col" name='exang' style="width: 420px;" id='exang'>
+                    <option value="">Is it present?</option>
+                    <option value="1">Yes</option>
+                    <option value="0">No</option>
+                </select>
+            </div>
+            
+            <br>
+    
+            <label for="ca">Number of major vessels:</label>
+            <select name='ca' style="height:25px; font-size: 20px; margin-left: 10px; width:420px;" id='ca'>
+                <option value="">No of vesseles</option>
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+            </select>
+            <br>
+            
+            <label for="cp">Chest pain:</label>
+            <select name='cp' style="height:25px; font-size: 20px; margin-left: 10px;width:420px;" id='cp'>
+                <option value="">Enter ches pain type</option>
+                <option value="1">typical angina</option>
+                <option value="2">atypical angina</option>
+                <option value="3">non-anginal pain</option>
+                <option value="4">asymptomatic</option>
+            </select>
+            <br>
+            
+            <label for="trtbs">Resting blood pressure(in mm Hg):</label>
+            <input id= 'trtbs' type="number" min="80" max="180" placeholder="Select">
+            <br>
+    
         
-        <input type="submit" name='Submit' >
-    </form>
+            <label for="chol">Cholestral in mg/dl:</label>
+            <input id= 'chol' type="number" min="0" max= '500' placeholder="Select">
+            <br>
+    
+            <label for="fbs">Fasting blood sugar (more than 120 mg/dl):</label>
+            <select name='fbs' style="height:25px; margin-left: 10px; font-size: 20px; width:420px;" id='fbs'>
+                <option value="">Select yes if its more than 120mg/dl</option>
+                <option value="1">Yes</option>
+                <option value="0">No</option>
+            </select>
+            <br>
+    
+            <label for="rest_ecg">Rest ecg:</label>
+            <select name='rest_ecg' style="height:25px; margin-left: 10px; font-size: 20px; width:420px;" id='rest_ecg'>
+                <option value="">Select from following options</option>
+                <option value='0'>Normal</option>
+                <option value='1'>Having ST-T wave abnormality</option>
+                <option value='2'>Showing probable or definite left ventricular hypertrophy by Estes' criteria</option>
+            </select>
+            <br>
+    
+            <label for="thalanch">Maximum Heart rate:</label>
+            <input id= 'thalanch' type="number" min='1' max='250' placeholder="Select">
+            <br>
+        </form>
+        <button>Submit</button>
+    </div>
     
 </body>
